blt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-chrisui
  namespace: chris-3114b1
  labels:
    app.kubernetes.io/name: test-chrisui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-chrisui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-chrisui
    spec:
      containers:
      - name: test-chrisui
        image: ghcr.io/fnndsc/chris_ui:36f2dcb
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 1
            memory: 256Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
      terminationGracePeriodSeconds: 1
