blt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-chrisui
  namespace: chris-3114b1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test-chrisui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
