blt/workaround-http01challenge-route.yml
# Workaround for broken cert-manager.io operator on NERC-OCP
# See https://mghpcc.supportsystem.com/tickets.php?id=12850

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: letshack
  namespace: chris-3114b1
  labels:
    app.kubernetes.io/name: letshack
spec:
  host: blt.chrisproject.org
  path: /.well-known/acme-challenge # <-- "catch-all" path
  to:
    kind: Service
    # hard-coded name of service for HTTP-01 solver
    name: cm-acme-http-solver-slmcb # <-- !!!CHANGE ME!!!
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    destinationCACertificate: ''
  port:
    targetPort: http
